tests/NormalTests/paczka2/big_fuzzy/16845666.err
Error in line 4: 7GZfQ1 S172 -4,9
Error in line 8: KBuS3fuyg A9 82,9
Error in line 9: KBuS3fuyg S172 11,1
Error in line 10: H4nbA9Vy A9 75,8
Error in line 22: KBuS3fuyg A9 25,4
Error in line 26: b¦a0Rp S172 75,¦
Error in line 24: b3a0Rp S172 70,4
Error in line 23: KBuS3fuyg A812 7,0
Error in line 27: b3a0Rp S848 78,8
Error in line 42: jF3JhHh4 A9 72,
Error in line 39: A812 S172 58,8
Error in line 6: 7GZfQ1 S172 105,1
Error in line 40: b3a0Rp S172 99,4
Error in line 48: jF3JhHh4 A9 49,3
Error in line 57: b3a0Rp S848 70,8
Error in line 66: 3DYMx1Cwn S172 61,9
Error in line 65: b3a0Rp S172 41,2
Error in line 75: KBuS3fuyg S172 75,93
Error in line 81: A812 S172 9,3
Error in line 83: 7GZfQ1 A9 99,7
Error in line 90: 7GZfQ1 A812 5,4
Error in line 100: 7GZfQ1 A812 463,56
Error in line 102: A812 S172 20,9
Error in line 104: jF3JhHh4 S@4@ 66,5
Error in line 95: KBuS3fuyg S172 304,2
Error in line 105: KBuS3fuyg A9 99,9
Error in line 106: 3DYMx1Cwn A812 13,2
Error in line 98: 7GZfQ1 A812 95,0
Error in line 107: KBuS3fuyg S172 0,3
Error in line 126: KBuS3fuyg S848 0,09
Error in line 123: KBuS3fuyg S848 14,2
Error in line 137: b3a0Rp S172 85,9
Error in line 138: jF3JhHh4 S848 196,8
Error in line 148: A812 S172 88,6
Error in line 145: 3DYMx1Cwn S172 55,2
Error in line 162: 3DYMx1Cwn A9 28,4
Error in line 164: b3a0Rp A812 260,5
Error in line 175: KBuS3fuyg S848 30,9
Error in line 179: 7GZfQ1 A9 87,1
Error in line 181: b3a0Rp S848 33,8
Error in line 205: H4nbA9Vy S848 38,0
Error in line 200: jF3JhHh4 A9 12,5
Error in line 214: 7GZfQ1 S848 15,8
Error in line 218: 7GZfQ1 S172 76,4
Error in line 225: H4nbA9Vy S848 320,6
Error in line 234: H4nbA9Vy S172 72,9
Error in line 235: H4nbA9Vy S848 44,4
Error in line 239: 7GZfQ1 S172 307,24
Error in line 245: 7GZfQ1 A812 R4,2
